# mechanogenomic-virtual-cell

./: .gitignore  CITATION.cff  Datasers.md  KNOWN_ISSUES.md  LICENSE  README.md  Theory_draft.md  Thoery_draft.md  dockerignore  fast_model.py  hepatocyte_posterior.json  inference.py  make_figures.py  mvirtual_cell.py  paths.py  pyproject.toml  requirements.txt  test_virtual_cell.py
Data/: saturating_params.json
data/: Datasets.md  RANseq_datasets_info.md
docker/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
results/: compute_form_comparison.py  form_comparison.json  hepatocyte_posterior.json  make_figures.py
src/: __init__.py  benchmark.py  calibration.py  fast_model.py  gene_module.py  hepatic_panel.py  make_state_grid.py  mvirtual_cell.py  pharmacology.py  recalibration.py  sensitivity.py  stats_ci.py  virtual_cell.py
src/inference/: recalibration.py
test/: test_virtual_cell.py
transcriptomics/: .gitignore  0_update_gene_list.R  1_1_dds.R  1_2_Stage_mean_genes.R  1_3_Fit_filter.R  1_4_Plots_fitting.R  1_5_DGE_stages.R  1_Get_collapsse_data.R  2_validate_predictions.py  README.md
transcriptomics/data/: 0_genes_nucleo_all_updated.tsv  samples_used_metadata.tsv
transcriptomics/geo/R_objects/: 1_1_metadata_master.tsv  GSE130970_META.rds  GSE135251_META.rds  GSE162694_META.rds
transcriptomics/results/: validation_results.json  validation_results.tsv
transcriptomics/results/dge_stages/: dge_calls.tsv  dge_gene_summary.tsv  dge_genes_per_contrast.tsv  dge_intersections.tsv  dge_lrt_joint.tsv
transcriptomics/results/model_fits/: conserved_genes.tsv  model_fits.tsv
transcriptomics/results/normalization/: meta_filtered_GSE130970.tsv  meta_filtered_GSE135251.tsv  meta_filtered_GSE162694.tsv
transcriptomics/results/stage_means/: mean_expr_per_stage.tsv
visualization/: README.md  render_cross_section_hq.py  render_fluorescence.py  render_pyvista_virtual_cell.py  states.json  virtual_cell_demo_simple.html
