[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mechanogenomic-virtual-cell"
version = "0.2.0"
description = "A phenotype-aware physical-computational virtual cell linking tissue stiffness to nuclear form and mechanogenomic state."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Pérez-Calixto" },
]
keywords = [
    "mechanotransduction", "virtual cell", "mechanobiology", "fibrosis",
    "motor-clutch", "YAP", "systems biology", "computational biology",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# performance
fast = ["numba>=0.57"]
# symbolic regression
symbolic = ["gplearn>=0.4"]
# figures
figures = ["matplotlib>=3.7", "seaborn>=0.12"]
# 3D interactive visualization (PyVista + Trame)
viz = [
    "pyvista>=0.43",
    "trame>=3.0",
    "trame-vtk>=2.5",
    "trame-vuetify>=2.4",
]
# neural posterior (optional inference backend)
neural = ["sbi>=0.22", "torch>=2.0"]
# development / testing
dev = ["pytest>=7.0"]
# everything
all = [
    "numba>=0.57", "gplearn>=0.4", "matplotlib>=3.7", "seaborn>=0.12",
    "pyvista>=0.43", "trame>=3.0", "trame-vtk>=2.5", "trame-vuetify>=2.4",
]

[project.urls]
Homepage = "https://github.com/Danpc11/mechanogenomic-virtual-cell"
Repository = "https://github.com/Danpc11/mechanogenomic-virtual-cell"
Documentation = "https://github.com/Danpc11/mechanogenomic-virtual-cell/wiki"

# the package modules live in src/ (mapped to the importable name `mvcell`)
[tool.setuptools]
packages = ["mvcell"]

[tool.setuptools.package-dir]
mvcell = "src"

[tool.setuptools.package-data]
mvcell = ["*.py"]

[project.scripts]
mvcell-demo = "mvcell.virtual_cell:_demo"
mvcell-benchmark = "mvcell.benchmark:run_benchmark"
mvcell-sensitivity = "mvcell.sensitivity:run_sensitivity"
